enable module system